# facescanning

./: .gitignore  .prettierignore  .prettierrc  PRODUCTION.md  PRODUCTION_GUIDE.md  README.md  STRUCTURE.md  commitlint.config.js  lint-staged.config.js  package.json  pnpm-workspace.yaml  prettier.config.js
_client/: .dockerignore  .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  Dockerfile.dev  Dockerfile.prod  README.md  eslint.config.js  package-lock.json  tsconfig.json  vite.config.ts
ai/: .env.example  .gitignore  README.md  app.py  arcfacecustom.py  controller.py  detection_tracker.py  face_processing.py  pyproject.toml  repository.py  service.py
ai/app/: api.py  auth.py  main.py
ai/app/configs/: app_config.py  core_config.py  redis_keys.py
ai/app/core/: dummy_embedding.py  face_blob.py  face_detection.py  face_embedding.py  face_recognition.py  face_tracking.py  main.py  test.py  vector.py
ai/app/database/: redis.py
ai/app/routes/: vector_route.py  websocket_route.py
ai/app/services/: redis_service.py  server_service.py  vector_service.py  webscoket_service.py
ai/app/utils/: transform_factory.py
base/: .gitignore  PRODUCTION_GUIDE.md  README.md  STRUCTURE.md
client/: .env.example  .env.prod.example  AI_CODING_GUIDE.md  components.json  eslint.config.js  package-lock.json  package.json
server/: .dockerignore  .env.example  .env.prod.example  .gitignore  .prettierignore  Dockerfile.prod  app.py  cors.dev.xml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  jest.setup.ts  nest-cli.json  (+9 more)
(+214 files in other folders)
